--- a/Client/app/src/main/res/layout/activity_main.xml
+++ b/Client/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_bias="0.055" />
 
     <TextView
+        android:id="@+id/netstate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Server: 101.132.97.148"
