Synchronized filewrite, server separate thread

--- a/Client/app/src/main/res/layout/activity_main.xml
+++ b/Client/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.192" />
+        app:layout_constraintVertical_bias="0.163" />
 
     <TextView
         android:id="@+id/longitude"
@@ -76,10 +76,24 @@
         android:text="0.00000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.273" />
+        app:layout_constraintVertical_bias="0.224" />
+
+    <TextView
+        android:id="@+id/speed"
+        android:layout_width="160dp"
+        android:layout_height="28dp"
+        android:text="Speed: 0.0 m/s"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.284" />
 
     <TextView
         android:id="@+id/status"
@@ -120,8 +134,8 @@
 
     <Button
         android:id="@+id/send"
-        android:layout_width="360dp"
-        android:layout_height="47dp"
+        android:layout_width="411dp"
+        android:layout_height="46dp"
         android:text="TCP SEND"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -130,7 +144,7 @@
 
     <Button
         android:id="@+id/usend"
-        android:layout_width="360dp"
+        android:layout_width="410dp"
         android:layout_height="47dp"
         android:text="UDP SEND"
         app:layout_constraintBottom_toBottomOf="parent"
